# seqaire

./: .gitattributes  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  index.html  rustfmt.toml
.agents/agents/: rust-refactor.md
.claude/: settings.json
.claude/plans/: indels-review.md  proptest-fixes.md  vcf.md
.config/: nextest.toml
.config/tracey/: config.styx
.github/: FUNDING.yml
.github/workflows/: ci.yml  fuzz.yml
.zed/: settings.json
claude/plans/: hts-tests.md
crates/seqair/: Cargo.toml  README.md
crates/seqair-types/: Cargo.toml
crates/seqair-types/src/: bam_flags.rs  base.rs  base_quality.rs  lib.rs  phred.rs  pos.rs  probability.rs  region_string.rs  rms.rs  strand.rs
crates/seqair/benches/: bam.rs  comparison.rs  cram.rs  vcf.rs
crates/seqair/examples/: aligned_pairs_walk.rs  base_mods.rs  mpileup.rs  pileup_extras.rs  pileup_extras_simple.rs  realignment.rs  simple_variant_caller.rs
crates/seqair/fuzz/: Cargo.toml  Dockerfile.x86_64  README.md  generate_seeds.py  run_all.sh
crates/seqair/fuzz/examples/: gen_indexed_seeds.rs
crates/seqair/fuzz/fuzz_targets/: fuzz_aligned_pairs.rs  fuzz_bam_aux.rs  fuzz_bam_record.rs  fuzz_base_convert.rs  fuzz_cram_bitstream.rs  fuzz_cram_decode_full.rs  fuzz_cram_encoding_decode.rs  fuzz_cram_substitution.rs  fuzz_csi_index.rs  fuzz_pileup_full.rs  fuzz_reader_bam.rs  fuzz_reader_indexed.rs  fuzz_readers_pileup.rs  fuzz_region_string.rs  fuzz_structured_pileup.rs
crates/seqair/fuzz/seeds/fuzz_bam_index/: test_bai
crates/seqair/fuzz/seeds/fuzz_bam_record/: record_1  record_2  record_3  record_4
crates/seqair/fuzz/seeds/fuzz_bgzf/: block_0  block_1  block_2
crates/seqair/fuzz/seeds/fuzz_cram_block/: test_gzip_cram_blocks
crates/seqair/fuzz/seeds/fuzz_cram_codecs/: rans4x8_order0
crates/seqair/fuzz/seeds/fuzz_cram_container/: test_cram_container  test_gzip_cram_container  test_v30_cram_container
crates/seqair/fuzz/seeds/fuzz_cram_decode_full/: test_cram_start  test_v30_cram_start
crates/seqair/fuzz/seeds/fuzz_cram_header/: cram_start  test_cram_header  test_v30_cram_header
crates/seqair/fuzz/seeds/fuzz_cram_varint/: itf8_16384
crates/seqair/fuzz/seeds/fuzz_csi_index/: deep_tree  empty  one_ref  two_refs  with_aux
crates/seqair/fuzz/seeds/fuzz_fasta_index/: test_fasta_fai
crates/seqair/fuzz/seeds/fuzz_gzi/: full  trimmed
crates/seqair/fuzz/seeds/fuzz_pileup_full/: record_0
crates/seqair/fuzz/seeds/fuzz_reader_bam/: bam_bai_concat
crates/seqair/fuzz/seeds/fuzz_reader_indexed/: bam_empty_bai  bam_header_only  bam_medium  bam_no_fasta  bam_seed  cram_gzip  cram_no_fasta  cram_seed  cram_v30  cram_v31  plain_sam  plain_sam_multi_contig  plain_sam_no_fasta  sam_bgzf  test_bam_bai
crates/seqair/fuzz/seeds/fuzz_readers_pileup/: full_pipeline
crates/seqair/fuzz/seeds/fuzz_region_string/: MT_1-16569  chr1_1-1000  chr1_100  chr1_1000-2000
crates/seqair/fuzz/seeds/fuzz_sam_header/: full_header  line_0  line_1  line_2  line_3  line_4
crates/seqair/fuzz/src/: indexed_reader.rs  lib.rs
crates/seqair/proptest-regressions/bam/: aux.txt  aux_data.txt  region_buf.txt
crates/seqair/proptest-regressions/cram/: rans.txt  rans_nx16.txt  varint.txt
crates/seqair/proptest-regressions/reader/: segment.txt
crates/seqair/proptest-regressions/vcf/: record_encoder.txt
crates/seqair/src/: bam.rs  cram.rs  fasta.rs  io.rs  lib.rs  reader.rs  sam.rs  utils.rs  vcf.rs
crates/seqair/src/bam/: aligned_pairs.rs  aligned_pairs_view.rs  aux.rs  aux_data.rs  base_mod.rs  bgzf.rs  bgzf_writer.rs  cigar.rs  csi_index.rs  flags.rs  header.rs  index.rs  nm_md.rs  owned_record.rs  pileup.rs  reader.rs  record.rs  record_store.rs  region_buf.rs  seq.rs  test_util.rs  writer.rs
crates/seqair/src/cram/: bitstream.rs  block.rs  codec_io.rs  compression_header.rs  container.rs  encoding.rs  index.rs  rans.rs  rans_nx16.rs  rans_nx16_avx2.rs  rans_nx16_neon.rs  reader.rs  slice.rs  tok3.rs  varint.rs
crates/seqair/src/fasta/: gzi.rs  index.rs  reader.rs
crates/seqair/src/io/: index_builder.rs
crates/seqair/src/reader/: formats.rs  fuzz.rs  indexed.rs  readers.rs  resolve.rs  segment.rs
crates/seqair/src/sam/: reader.rs
crates/seqair/src/vcf/: alleles.rs  bcf_encoding.rs  bcf_writer.rs  encoder.rs  error.rs  header.rs  index_builder.rs  record.rs  record_encoder.rs  unified.rs  writer.rs
crates/seqair/tests/: bam_write_roundtrip.rs  bam_writer_stress.rs  base_decode.rs  base_mod_oracle.rs  bgzf.rs  bgzf_block_boundary.rs  bgzf_writer_validation.rs  calibrate_byte_hint.rs  cigar.rs  compare_aux_with_htslib_and_noodles.rs  compare_bai_with_noodles.rs  compare_bam_with_htslib.rs  compare_bam_with_noodles.rs  compare_bgzf_crate.rs  compare_bgzf_with_noodles.rs  compare_cram_parsing.rs  compare_cram_with_htslib.rs  compare_cram_with_noodles.rs  compare_fasta_with_htslib.rs  compare_fasta_with_noodles.rs  compare_header.rs  compare_pileup.rs  compare_records.rs  compare_sam_with_htslib.rs  compare_vcf_with_htslib.proptest-regressions  compare_vcf_with_htslib.rs  compare_vcf_with_noodles.proptest-regressions  compare_vcf_with_noodles.rs  cram_tlen.rs  cram_version_matrix.rs  csi_index.rs  dedup.proptest-regressions  dedup.rs  examples.rs  fasta.proptest-regressions  fasta.rs  fork.rs  helpers.rs  htslib_edge_cases.rs  htslib_sam_parity.rs  (+30 more)
docs/spec/: 0-0-general.md  0-1-bam-flags.md  0-1-base-quality.md  0-1-phred.md  0-1-pos.md  0-general.md  0-pos.md  1-1-unified_reader.md  1-2-bgzf.md  1-3-cigar.md  1-phred.md  2-bam-1-reader.md  2-bam-2-index.md  2-bam-3-1-header.md  2-bam-3-2-record.md  2-bam-3-4-seq_codec.md  2-base-3-3-decode.md  2-cram-1-reader.md  2-csi-index.md  2-fastq.md  2-sam-1-reader.md  2-tabix.md  3-record_store.md  3-region_buf.md  4-pileup-dedup.md  4-pileup.md  5-bcf-encoder.md  5-bcf-writer.md  5-index-builder.md  5-record-encoder.md  5-vcf-header.md  5-vcf-record.md  5-vcf-writer.md  6-bam-record-builder.md  6-bam-writer.md  7-base-modifications.md  8-perf.md  bam_header.md  bam_index.md  bam_reader.md  (+15 more)
tests/data/: rastair1.bed  test.bam  (+6 more)
tools/: analyze_profile.py
(+1 files in other folders)
