[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
thiserror = "2.0.18"
insta = { version = "1.46.3", features = ["filters"] }
proptest = "1.11.0"
rust-htslib = { version = "1.0.0", git = "https://github.com/Softleif/rust-htslib", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage, coverage_nightly)',
] }

[workspace.lints.clippy]
dbg_macro = "warn"
panic = "deny"
indexing_slicing = "warn"
undocumented_unsafe_blocks = "deny"
unwrap_used = "warn"
unwrap_in_result = "warn"

[profile.dev.package]
rand_chacha.opt-level = 3
proptest.opt-level = 3
insta.opt-level = 3
similar.opt-level = 3
libdeflater.opt-level = 3
bgzf.opt-level = 3
rust-htslib.opt-level = 3
md5.opt-level = 3
xz2.opt-level = 3
bzip2.opt-level = 3
flate2.opt-level = 3
