[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
thiserror = "2.0.18"
bytemuck = { version = "1.25", features = ["derive"] }
insta = { version = "1.47.2", features = ["filters"] }
proptest = "1.11.0"
rust-htslib = { version = "1.0.0", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage, coverage_nightly)',
] }

[workspace.lints.clippy]
dbg_macro = "warn"
panic = "deny"
indexing_slicing = "warn"
undocumented_unsafe_blocks = "deny"
unwrap_used = "warn"
unwrap_in_result = "warn"
arithmetic_side_effects = "warn"
ok_expect = "warn"

# Use tracing
print_stdout = "warn"

# Numbers are hard
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
comparison_chain = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
lossy_float_literal = "warn"
non_zero_suggestions = "warn"

# Some pedantic lints we like
doc_link_with_quotes = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
format_collect = "warn"
format_push_string = "warn"
index_refutable_slice = "warn"
default_trait_access = "warn"
rc_buffer = "warn"
mem_forget = "warn"
return_and_then = "warn"
same_name_method = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
manual_is_variant_and = "warn"
manual_assert = "warn"
manual_string_new = "warn"
option_option = "warn"
equatable_if_let = "warn"
allow_attributes_without_reason = "warn"
infinite_loop = "warn"
create_dir = "warn"
pathbuf_init_then_push = "warn"
format_in_format_args = "warn"

[profile.dev.package]
rand_chacha.opt-level = 3
proptest.opt-level = 3
insta.opt-level = 3
similar.opt-level = 3
libdeflater.opt-level = 3
bgzf.opt-level = 3
rust-htslib.opt-level = 3
md5.opt-level = 3
xz2.opt-level = 3
bzip2.opt-level = 3
flate2.opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
