[package]
name = "seqair"
version = "0.1.0"
edition = "2024"
description = "Pure-Rust BAM/SAM/CRAM/FASTA reader and pileup engine"
repository = "https://github.com/Softleif/seqair"
license = "MIT OR Apache-2.0"
rust-version = "1.92.0"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
fuzz = []

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
indexmap = "2"
itoa = "1"
libdeflater = "1.25.2"
ryu = "1"
seqair-types = { version = "0.1.0", path = "../seqair-types" }
rustc-hash = "2.1.2"
flate2 = "1.1.9"
bzip2 = "0.6.1"
xz2 = "0.1.7"
md5 = "0.8.0"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = "3.27.0"
criterion = { version = "0.8", features = ["html_reports"] }

# to compare with:
bgzf = "0.3.0"
rust-htslib = { workspace = true, default-features = false, features = [
    "libdeflate",
    "bzip2",
    "lzma",
    "static",
] }
noodles = { version = "0.109.0", features = [
    "bam",
    "bcf",
    "bgzf",
    "core",
    "cram",
    "fasta",
    "sam",
    "vcf",
] }
noodles-bgzf = { version = "0.46.0", features = ["libdeflate"] }
noodles-util = { version = "0.78.0", features = ["alignment"] }
cstr8 = "0.1.4"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"

[[bench]]
name = "bam"
harness = false

[[bench]]
name = "fasta"
harness = false

[[bench]]
name = "vcf"
harness = false

[lints]
workspace = true
